# ellpaca-pipeline-report

./: .dockerignore  .gitignore  Dockerfile  First Fifty Participants v001_report.html  ftc_temp.parquet  hello.py  justfile  lynn_env_001_report.html  lynn_nef_001_report.html  pyproject.toml  yoink.csv
lib/: README.md
src/pipeline_report/: _variables.yml  cli.py  create_plots.py  generate_report_data.py  main.py  main.qmd  parse_data.py  render_report.py  utils.py
src/pipeline_report/main_cache/html/: __packages  unnamed-chunk-1_4627e2e8849f0b954627aea3f040c1db.RData  unnamed-chunk-2_8dacfafd831653299b8f51614fa45b14.RData  unnamed-chunk-3_ffc5a752f53331c6f44107a24e186fba.RData  unnamed-chunk-4_9e907bf06316e9d21445b453bdcb3ba3.RData  unnamed-chunk-5_6872a6983120ac1dd212f59d1ea2c227.RData  unnamed-chunk-6_7ea79c7bb31dc19b8a7d4b470005d92a.RData  unnamed-chunk-6_7ea79c7bb31dc19b8a7d4b470005d92a.rdb  unnamed-chunk-6_7ea79c7bb31dc19b8a7d4b470005d92a.rdx  unnamed-chunk-7_345d6d16dec3ebff2e2130e4a8daf0bf.RData  unnamed-chunk-8_46fdfb6d90291f0d53aa3411ccc2d78b.RData
src/pipeline_report/main_files/libs/bootstrap/: bootstrap-1eeb13ffc9bedd4ba5f6f1fe0116ffc4.min.css  bootstrap-9d106be9fd928bfd4a71b88a9ef40a34.min.css
src/pipeline_report/templates/: template.html  template.typ  test_data.json
src/pipeline_report/templates/data/: data.json
