[project]
name = "pipeline-report"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "biopython>=1.85",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "plotnine>=0.14.5",
    "polars>=1.28.1",
    "pyarrow>=20.0.0",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
    "typer>=0.15.2",
    "upsetplot>=0.9.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
